hphp/test/zend/bad/Zend/tests/call_user_func_004.php
<?php

class foo {
	public function teste() {
		$this->a = 1;
	}
}

call_user_func(array('foo', 'teste'));

?>